[package]
name = "boulder"
version = "0.1.0"
edition = "2021"
authors = ["Alex Holmes <alex@sed.dev>"]

[toolchain]
channel = "nightly"

[dependencies]
anyhow = "1.0"
bytes = "1.8"
crc32fast = "1.4.2"
crossbeam-skiplist = "0.1"
moka = { version = "0.12", features = ["sync"] }
ouroboros = "0.18"
parking_lot = "0.12.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
crossbeam-channel = "0.5.13"
